test/corpus/L1/negative/empty-symbol.st
"---
id: empty-symbol
kind: negative
phase: lex
layer: L1
spec: anexoA:error.empty-symbol
origin: spec-ANSI
section: error.empty-symbol
codes: E_EMPTY_SYMBOL
---"
#
